--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,11 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@tiptap/extension-color": "^2.11.7",
+    "@tiptap/extension-text-style": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.7.9",
     "dropzone": "^6.0.0-beta.2",
     "react": "^18.3.1",
@@ -22,6 +27,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "sass": "^1.86.3",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
