--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5"
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.9.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "mongodb": "^6.12.0"
+    "mongodb": "^6.12.0",
+    "nodemon": "^3.1.9"
   }
 }
-
