--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@tiptap/extension-color": "^2.11.7",
+    "@tiptap/extension-image": "^2.11.9",
     "@tiptap/extension-text-style": "^2.11.7",
+    "@tiptap/html": "^2.11.7",
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
