--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "@uploadthing/react": "^7.3.1",
     "axios": "^1.7.9",
     "dropzone": "^6.0.0-beta.2",
     "react": "^18.3.1",
@@ -29,6 +30,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "uploadthing": "^7.7.2",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
